crates/dust-ast/src/parser/snapshots/dust_ast__parser__statement__tests__block.snap
---
source: crates/dust-ast/src/parser/statement.rs
expression: blocks
---
[
  {
    "stmts": [
      {
        "Let": {
          "ident": {
            "symbol": 0,
            "span": {
              "offset": 10,
              "length": 3
            }
          },
          "expr": null,
          "span": {
            "offset": 6,
            "length": 8
          }
        }
      },
      {
        "Expr": {
          "Literal": {
            "lit": {
              "Number": 15.0
            },
            "span": {
              "offset": 19,
              "length": 5
            }
          }
        }
      }
    ],
    "expr": {
      "Literal": {
        "lit": {
          "Bool": true
        },
        "span": {
          "offset": 30,
          "length": 4
        }
      }
    },
    "span": {
      "offset": 0,
      "length": 36
    }
  },
  {
    "stmts": [
      {
        "Let": {
          "ident": {
            "symbol": 0,
            "span": {
              "offset": 48,
              "length": 3
            }
          },
          "expr": null,
          "span": {
            "offset": 44,
            "length": 8
          }
        }
      }
    ],
    "expr": {
      "Literal": {
        "lit": {
          "Number": 2.0
        },
        "span": {
          "offset": 82,
          "length": 3
        }
      }
    },
    "span": {
      "offset": 38,
      "length": 49
    }
  },
  {
    "stmts": [
      {
        "Let": {
          "ident": {
            "symbol": 0,
            "span": {
              "offset": 99,
              "length": 3
            }
          },
          "expr": null,
          "span": {
            "offset": 95,
            "length": 8
          }
        }
      },
      {
        "Let": {
          "ident": {
            "symbol": 1,
            "span": {
              "offset": 112,
              "length": 3
            }
          },
          "expr": {
            "Literal": {
              "lit": {
                "Number": 2.0
              },
              "span": {
                "offset": 118,
                "length": 1
              }
            }
          },
          "span": {
            "offset": 108,
            "length": 12
          }
        }
      },
      {
        "Let": {
          "ident": {
            "symbol": 2,
            "span": {
              "offset": 129,
              "length": 3
            }
          },
          "expr": {
            "Literal": {
              "lit": {
                "Bool": true
              },
              "span": {
                "offset": 135,
                "length": 18
              }
            }
          },
          "span": {
            "offset": 125,
            "length": 29
          }
        }
      }
    ],
    "expr": null,
    "span": {
      "offset": 89,
      "length": 67
    }
  }
]
